# haskell-book-club

./: .gitignore  stack.yaml
chapter1/: exercises.md  readme.html  readme.org
chapter10/: Chapter10.hs  readme.html  readme.org
chapter11/: Caesar.hs  Chapter11.hs  Phone.hs  TooMany.hs  Trees.hs  readme.html  readme.org
chapter12/: BinaryTree.hs  Chapter12.hs  Either.hs  Mayybe.hs  Natural.hs  Unfold.hs  readme.html  readme.org
chapter13/: readme.html  readme.org
chapter13/ciphers/: LICENSE  ciphers.cabal
chapter13/ciphers/exe/: Main.hs
chapter13/ciphers/src/: Caesar.hs  Palindrome.hs  Person.hs  Prompt.hs
chapter13/hangman/: hangman.cabal
chapter14/: readme.org
chapter14/addition/: Addition.hs  addition.cabal
chapter15/: readme.org
chapter15/exercises/: exercises.cabal
chapter15/exercises/src/: ChapterExercises.hs  Listy.hs  ListyInstances.hs  Main.hs
chapter15/exercises/tests/: tests.hs
chapter16/: package.yaml  readme.html  readme.org
chapter17/: package.yaml  readme.html  readme.org  stack.yaml
chapter18/: LICENSE  package.yaml
chapter2/: package.yaml
chapter20/: package.yaml  readme.org
chapter21/: package.yaml  stack.yaml
chapter22/: package.yaml
chapter23/: package.yaml
chapter24/: package.yaml  stack.yaml
chapter25/: .gitignore  package.yaml
chapter26/: package.yaml
chapter27/: package.yaml
chapter28/: .gitignore  package.yaml
chapter29/: package.yaml
chapter3/: ChapterExerciseFunctions.hs  ChapterExercises.hs  exercises3_5.hs  print2.hs  print3.hs  print3broken.hs  reverse.hs  toporlocal.hs
chapter30/: package.yaml
chapter4/: ChapterExercises.hs  Exercises.hs  notes.html  notes.org
chapter5/: exercises.hs  exercises.html  exercises.md  exercises.org  readme.org  sing.hs
chapter6/: ChapterExercises.hs  EqExercises.hs  exercises.html  exercises.org  readme.org
chapter7/: Chapter7.hs  readme.html  readme.org
chapter8/: Exercises.hs  WordNumber.hs  readme.html  readme.md  readme.org
chapter9/: Arseniy.hs  Chapter9.hs  Cipher.hs  readme.html  readme.org
fingerd/: finger.db  fingerd.cabal  stack.yaml
(+75 files in other folders)
