name:                ciphers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/coacoas/ciphers#readme
license:             BSD3
license-file:        LICENSE
author:              Bill Carlson
maintainer:          bill@coacoas.net
copyright:           Copyright (c) 2018 Bill Carlson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Caesar
                     , Palindrome
                     , Person
                     , Prompt
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable cipher
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers
