name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/coacoas/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Bill Carlson
maintainer:          bill@coacoas.net
copyright:           Copyright (c) 2018 Bill Carlson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Listy
                     , ChapterExercises
                     , ListyInstances
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >=4.7 && <5
                     , hspec
                     , QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-orphans
  main-is:             tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , exercises
                     , QuickCheck
  default-language:    Haskell2010